default/objects/LongForm_Pricelist_Item__c/LongForm_Pricelist_Item__c.object-meta.xml
<CustomObject>
    <label>LongForm Pricelist Item</label>
    <nameField>
        <displayFormat>LFPLI-{00000}</displayFormat>
        <label>LongForm Pricelist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LongForm Pricelist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>