default/objects/LongForm_Pricelist_Item__c/fields/Long_Form_Pricelist__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Pricelist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Pricelist</label>
    <referenceTo>LongForm_Pricelist__c</referenceTo>
    <relationshipName>Long_Form_Pricelist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>