default/objects/LongForm_Pricelist_Item__c/fields/Show_Category__c.field-meta.xml
<CustomField>
    <fullName>Show_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Category</label>
    <type>Checkbox</type>
</CustomField>