default/objects/LongForm_Pricelist_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Shell Home Fuel</fullName>
            </value>
            <value>
                <fullName>Transaction Shell Home Non-Fuel</fullName>
            </value>
            <value>
                <fullName>Transaction Shell Non-Home Fuel</fullName>
            </value>
            <value>
                <fullName>Transaction Shell Non-Home Non-Fuel</fullName>
            </value>
            <value>
                <fullName>Transaction Shell Partner Fuel</fullName>
            </value>
            <value>
                <fullName>Transaction Shell Partner Non-Fuel</fullName>
            </value>
            <value>
                <fullName>All: Fuel</fullName>
            </value>
            <value>
                <fullName>All: Non-Fuel</fullName>
            </value>
            <value>
                <fullName>One Time Account Set Up</fullName>
            </value>
            <value>
                <fullName>One Time Card Set Up</fullName>
            </value>
            <value>
                <fullName>Regular Paper Invoice</fullName>
            </value>
            <value>
                <fullName>Regular Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Monthly Direct Debit</fullName>
            </value>
            <value>
                <fullName>Monthly Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Monthly Account Management</fullName>
            </value>
            <value>
                <fullName>Duplicate Invoice</fullName>
            </value>
            <value>
                <fullName>Late Invoice</fullName>
            </value>
            <value>
                <fullName>Eco Fee</fullName>
            </value>
            <value>
                <fullName>Card issue</fullName>
            </value>
            <value>
                <fullName>Exchange Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>